# pangloss-core

./: .gitignore  README.md  experiment.py  manmaxapi.json  neo4jdocker.sh  pyproject.toml  read_query.cypher  update_query.cypher  write_query.cypher
experiments/: recursive.py
pangloss_core/: api.py  application.py  background_tasks.py  database.py  exceptions.py  indexes.py  initialisation.py  models.py  result.py  settings.py  translation.py  users.py
pangloss_core/cli/: main.py
pangloss_core/cli/templates/app/: cookiecutter.json
pangloss_core/cli/templates/app/{{ cookiecutter.folder_name }}/: background_tasks.py  cli.py  models.py
pangloss_core/cli/templates/project/{{ cookiecutter.folder_name }}/: main.py  settings.py
pangloss_core/cypher_utils/: cypher.py
pangloss_core/model_setup/: base_node_definitions.py  build_model_hierarchy.py  config_definitions.py  model_manager.py  models_base.py  reference_node_base.py  relation_properties_model.py  relation_to.py  setup_utils.py  subnode_proxy.py
pangloss_core_new/: database.py  exceptions.py  models.py
pangloss_core_new/cypher_utils/: CYPHER.example  cypher.py
pangloss_core_new/model_setup/: base_node_definitions.py  config_definitions.py  embedded.py  model_manager.py  models_base.py  reference_node_base.py  relation_properties_model.py  relation_to.py  setup_utils.py  subnode_proxy.py
tests/: conftest.py  test_database.py  test_debug_problems.py  test_model_utils.py  test_models.py  test_translation.py
