[tool.poetry]
name = "pangloss-core"
version = "0.1.0"
description = ""
authors = ["Richard Hadden <richard.hadden@oeaw.ac.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.1"
pyhumps = "^3.8.0"
neo4j = "^5.17.0"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.27.1"
typer = "^0.9.0"
rich = "^13.7.1"
cookiecutter = "^2.6.0"
websockets = "^12.0"
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pangloss = 'pangloss_core.cli.main:cli'